--- a/blvkline/manifestbvkline.json
+++ b/blvkline/manifestbvkline.json
@@ -9,5 +9,5 @@
   "theme_color": "#ffffff",
   "lang": "en",
   "description": "blvck-line offical app"
-  "icons": https://github.com/gupalenok/gupalenok.github.io/blvkline/icons.json
+  "icons": "https://github.com/gupalenok/gupalenok.github.io/blvkline/icons.json"
 }
