--- a/blvkline/manifestbvkline.json
+++ b/blvkline/manifestbvkline.json
@@ -11,7 +11,7 @@
   "description": "blvck-line offical app"
   "icons": [
   {
-      "src": "https://www.pwabuilder.com/assets/icons/icon_512.png",
+      "src": "https://gupalenok.github.io/blvkline/android/android-launchericon-512-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
